# gw2-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
src/: lib.rs  main.rs
src/common/: client.rs  mod.rs  stats.rs  utils.rs
src/v2/: account.rs  characters.rs  currencies.rs  mod.rs  pvp.rs  worlds.rs  wvw.rs
