[package]
name = "gw2cli"
version = "0.1.0"
authors = ["Philipp Meier"]
edition = "2021"
keywords = ["gw2", "api", "stats", "gw2cli", "gw2-cli"]
license = "MIT"
readme = "README.md"

[dependencies]
# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
# Runtime to execute asynchronous Rust code.
tokio = { version = "1", features = ["full"] }
# Command Line Argument Parser for Rust.
clap = { version = "4.0.4", features = ["derive"] }
# Date and time handling for Rust.
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
# Used to color the terminal.
colored = "2.0.0"
# Framework for serializing and deserializing Rust data structures.
serde = { version = "1.0", features = ["derive"] }
# To encode strings
urlencoding = "2.1.2"
# Abstractions for async programming
futures = "0.3.25"
